# ft

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: dev.yml  nightly.yml  rust.yml
api/: Cargo.toml
api/src/: crypto.rs  decrypt.rs  encrypt.rs  files.rs  lib.rs
api/src/crypto/: decrypt.rs  encrypt.rs  getter_secret.rs  sender_secret.rs
api/src/files/: get.rs  send.rs
client/: Cargo.toml
client/src/: commands.rs  cypher.rs  main.rs  secret.rs
client/src/commands/: command.rs  length.rs  ls.rs
client/src/cypher/: crypt.rs  decrypt.rs  secret.rs
f2b/: Cargo.toml  pass.txt
f2b/src/: lib.rs
server/: Cargo.toml  Makefile
server/src/: commands.rs  cypher.rs  main.rs  secret.rs
server/src/commands/: command.rs  get.rs  length.rs  ls.rs
server/src/cypher/: crypt.rs  decrypt.rs  secret.rs
