[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = {git = "https://github.com/RustCrypto/AEADs"}
rand = "0.8.2"
f2b = {path = "../f2b"}
k256 = {version = "0.13.0", features = ["ecdh"]}
sha2 = "0.10.6"
rand_core = "0.6.4"
tokio = {version = "1.24.2", features = ["full"]}