[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
tokio = {version = "1.24.2", features = ["full"]}
rand_core = "0.6.4"
k256 = {version =  "0.12.0", features = ["ecdh"]}


[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1

[profile.dev.package.num-bigint-dig]
opt-level = 3
